--- a/package.json
+++ b/package.json
@@ -20,8 +20,10 @@
   },
   "homepage": "https://github.com/eh4git/express-sockets-boiler#readme",
   "dependencies": {
+    "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "express-handlebars": "^6.0.6",
+    "openai": "^3.1.0",
     "socket.io": "^4.5.4"
   },
   "devDependencies": {
