--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js",
-    "watch": "nodemon"
+    "dev": "nodemon"
   },
   "repository": {
     "type": "git",
@@ -24,7 +24,7 @@
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "express-handlebars": "^6.0.6",
-    "openai": "^3.1.0",
+    "openai": "^4.20.1",
     "socket.io": "^4.5.4"
   },
   "devDependencies": {
